--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="description" content="探索深邃思想，创造有意义的人生。深度思考、终身学习、持续成长的个人博客。">
     <meta name="keywords" content="深度思考,终身学习,个人成长,认知科学,思维模型">
     <meta name="author" content="Colin">
+    <!-- Content Security Policy -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://www.googletagmanager.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: https: http:; font-src 'self' data:; connect-src 'self' https://www.google-analytics.com;">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -37,8 +39,7 @@
         "description": "专注于深度思考、终身学习和个人成长的思想分享平台",
         "author": {
             "@type": "Person",
-            "name": "Colin",
-            "email": "littlelinthinks@gmail.com"
+            "name": "Colin"
         },
         "inLanguage": "zh-CN",
         "potentialAction": {
